--- a/deployment/web_portal/index.html
+++ b/deployment/web_portal/index.html
@@ -175,7 +175,7 @@
 
 <header>
     <div style="display: flex; align-items: center; justify-content: center; gap: 15px;">
-        <img src="image.png" alt="Multisoftware Logo" style="height: 60px;">
+        <img src="final_image.png" alt="Multisoftware Logo" style="height: 260px;">
         <h1 style="font-size: 28px; color: white;">Multisoftware Enterprise Portal</h1>
     </div>
 </header>
